2009-01-16  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Made the max value of split option unlimited.
	* doc/aria2c.1.txt
	* src/OptionHandlerFactory.cc

2009-01-16  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed compile warning/error.
	* src/DownloadResult.h
	* src/HttpDownloadCommand.cc
	* src/ServerStat.cc
	* test/RequestGroupTest.cc
	
2009-01-16  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added --event-poll option to select the method for polling events.
	The available methods are "select" and "epoll". "epoll" is
	available on Linux only. The earlier release has the compile
	option to choose from these methods.
	* configure.ac
	* src/RequestGroupMan.cc
	* src/OptionHandlerFactory.cc
	* src/EpollEventPoll.h
	* src/StreamFileAllocationEntry.cc
	* src/a2io.h
	* src/SelectEventPoll.h
	* src/option_processing.cc
	* src/prefs.h
	* src/EpollEventPoll.cc
	* src/EventPoll.h
	* src/SocketCore.h
	* src/Makefile.am
	* src/main.cc
	* src/DownloadEngine.h
	* src/SelectEventPoll.cc
	* src/DownloadEngine.cc
	* src/SocketCore.cc
	* src/DownloadEngineFactory.cc
	* src/Makefile.in
	* src/prefs.cc
	* src/usage_text.h

2009-01-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Included RecoverableException.h from main.cc
	* src/main.cc

2009-01-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Applied exit-status patch from Pascal Rigaux at Mandriva.  aria2
	now returns last error encountered in the HTTP/FTP downloads as a
	exit status value.  If all downloads finished successfully, aria2
	returns 0.  The error code is defined in src/DownloadResult.h.
	The error occurred in the download currently in progress is not
	reported as a last error.  If no error has encountered but there
	are in progress or waiting downloads, aria2 returns 7.
	
	* src/AbstractCommand.cc
	* src/DlAbortEx.h
	* src/DlRetryEx.h
	* src/DownloadCommand.cc
	* src/DownloadFailureException.h
	* src/DownloadResult.h
	* src/FtpNegotiationCommand.cc