@@ -961,10 +961,12 @@ writes the piece to the appropriate files.</td>
 </dt>
 <dd>
 <p>
-  In BitTorrent downloads, if the download speed is lower than SPEED,
-  aria2 initiates and accepts connections ignoring max peer cap.
+  If the whole download speed of every torrent is lower than SPEED,
+  aria2 temporarily increases the number of peers to try for more
+  download speed. Configuring this option with your preferred download
+  speed can increase your download speed in some cases.
   You can append <em>K</em> or <em>M</em>(1K = 1024, 1M = 1024K).
-  Default: <em>51200</em>
+  Default: <em>50K</em>
 </p>
 </dd>
 <dt>
@@ -2064,7 +2066,7 @@ files in the program, then also delete it here.</p></div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2009-01-16 00:36:39 JST
+Last updated 2009-01-16 00:56:38 JST
 </div>
 </div>
 </body>
