@@ -1,5 +1,11 @@
 2009-01-16  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
 
+	Rewritten the usage text for --bt-request-peer-speed-limit option.
+	* doc/aria2c.1.txt
+	* src/usage_text.h
+
+2009-01-16  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
+
 	Made the max value of split option unlimited.
 	* doc/aria2c.1.txt
 	* src/OptionHandlerFactory.cc
